# nothingbut-library

./: .gitignore  AI_ARCHITECTURE.md  AI_ASSISTANT_GUIDE.md  AI_E2E_TEST_PLAN.md  AI_USER_GUIDE.md  CLAUDE.md  HANDOFF_2025-03-11_DATABASE_FIXED.md  HANDOFF_2025-03-11_DATA_INTEGRATION.md  HANDOFF_2025-03-11_IMPORT_FEATURE.md  HANDOFF_2025-03-11_IMPORT_WORKING.md  HANDOFF_2025-03-11_LAYOUT_COMPLETE.md  HANDOFF_2025-03-11_TESTS_AND_SEED.md  HANDOFF_2025-03-11_UI_COMPLETE.md  HANDOFF_2026-03-12_AI_CORE_COMPLETE.md  HANDOFF_2026-03-13_FINAL.md  HANDOFF_PROMPT.md  QUICK_TEST.md  README.md  SESSION_SUMMARY.md  START_APP.md  TASK_11_STREAMING_COMPLETE.md  TASK_8_VECTOR_SEARCH_COMPLETE.md  TESTING_2COLUMN_LAYOUT.md  TESTING_GUIDE.md  TEST_STREAMING.md  TEST_VECTOR_SEARCH.md  UI_LAYOUT_FIX_COMPLETE.md  UI_LAYOUT_ISSUES.md  package.json  start.bat  start.sh  tailwind.config.js  test-novel.txt
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_core.sql  0002_novel.sql  0003_add_chapter_preview.sql  0004_add_source_site.sql  0005_ai.sql  0006_vector_search.sql  0007_epub.sql
src-tauri/src/: database.rs  errors.rs  lib.rs
src-tauri/src/core/: config.rs  mod.rs  models.rs  traits.rs  workspace.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/ai/: assistant.rs  commands.rs  database.rs  mod.rs  models.rs  ollama.rs  summarize.rs  vector.rs
src-tauri/src/modules/epub/: commands.rs  custom_fields.rs  database.rs  metadata.rs  mod.rs  models.rs  parser.rs  storage.rs
tests/scraper-test/: Cargo.toml  FINAL_ANALYSIS.md  HOW_TO_GET_COOKIES.md  README.md  SOLUTIONS_FROM_RESEARCH.md  TEST_RESULTS.md  cookie_extractor.html  extract_cookies.js  qidian_cookies.txt.example  research_github_projects.md
tests/scraper-test/src/: main.rs  test_book_page.rs  test_chromiumoxide_stealth.rs  test_headless_chrome.rs  test_http_direct.rs  test_with_cookies.rs
(+1922 files in other folders)
