[package]
name = "scraper-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_http_direct"
path = "src/test_http_direct.rs"

[[bin]]
name = "test_book_page"
path = "src/test_book_page.rs"

[[bin]]
name = "test_headless_chrome"
path = "src/test_headless_chrome.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] }
scraper = "0.20"
tokio = { version = "1", features = ["full"] }
headless_chrome = "1.0"
serde_json = "1"
urlencoding = "2.1"
